# MWWC_ContactSyncTool

./: .coveragerc  .gitignore  README.md  app.py  dev_server.sh  pyproject.toml  requirements.txt  run_tests.sh  sync-tool-notes.org
mwwc_sync_contacts/: __init__.py  action_network.py  airtable.py  app.py  google.py
mwwc_sync_contacts/data_transformation/: google.py
mwwc_sync_contacts/external_services/: action_network.py  airtable.py  google.py
src/: __init__.py  app.py  config.py  mwwc_action_network.py  mwwc_airtable.py  mwwc_google.py
tests/: conftest.py  test_action_network.py  test_airtable.py  test_app.py  test_mwwc_action_network.py  test_mwwc_airtable.py  test_mwwc_google.py
tests/external_services/: test_action_network.py  test_airtable.py
